--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, architecto eius nisi eligendi, ullam corrupti tenetur illum cum at qui molestias. Possimus placeat aliquid velit, modi quasi nesciunt eius minus.<br>
             </div>
             <div class="privetstvie">
-                <div class="slovo-privetstvie">Уважаемый гость, приветствую <br> на моём творческом сайте!<br>Здесь собрано всё то, чем я рада поделиться. Пишу стихи, прозу, музыку, песни на свои тексты и на стихи друзей.<br></div>
+                <div class="slovo-privetstvie">Уважаемый гость, приветствую <br> на моём творческом сайте!<br>Здесь собрано всё то, чем я рада поделиться. Пишу стихи, прозу, музыку, песни на свои тексты <br>и на стихи друзей.<br></div>
                 <img src="res/avatar-privetstvie.JPG" alt="Фото поэта" class="avatar-privetstvie"><br>
                 
             </div>
