--- a/index.html
+++ b/index.html
@@ -1417,7 +1417,7 @@
             <div class="privetstvie">
                 <div class="slovo-privetstvie">Уважаемый гость, приветствую <br> на моём творческом сайте!<br>Здесь собраны произведения, которыми я рада поделиться.                   Пишу стихи, прозу, музыку, песни на свои тексты <br>и на стихи друзей.<br></div>
                 <img src="res/avatar-privetstvie.JPG" alt="Фото поэта" class="avatar-privetstvie"><br>
-                <div class="slovo-privetstvie">Сидорова Наталья - поэтесса и композитор, член Союза Писателей Крыма, участница и призер нескольких всероссийских, а также международных конкурсов.  Некоторые стихотворения опубликованы в сборинках «Параллели», «Крылья», «Восхождение», «Московские окна» и в газете «Литераторъ».</div>
+                <div class="slovo-privetstvie">Сидорова Наталья - поэтесса и композитор, член Союза Писателей Крыма, участница и призер нескольких всероссийских, а также международных конкурсов.  Некоторые стихотворения опубликованы в сборинках «Параллели», «Крылья», «Белая скала», «Восхождение», «Московские окна» и в газете «Литераторъ».</div>
             </div>
     </div>
         <footer>
